--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@relative-ci/agent": "^1.3.0",
+    "@svgr/webpack": "^5.4.0",
     "autoprefixer": "^10.0.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.1.1",
