--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: hmarr/debug-action@v3
+
       - name: Cache node modules
         uses: actions/cache@v4
         env:
