--- a/package.json
+++ b/package.json
@@ -39,8 +39,16 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
-    "antd": "^4.6.5",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@ant-design/pro-components": "2.8.1",
+    "antd": "5.24.6",
+    "classnames": "2.5.1",
+    "core-js": "3.39.0",
+    "date-fns": "4.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-feather": "2.0.10",
+    "react-markdown": "9.0.1",
+    "react-router-dom": "7.5.0",
+    "swr": "2.3.3"
   }
 }
