--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,7 @@ jobs:
       - run: npm run build --if-present
         env:
           RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEBUG: ${{ secrets.DEBUG }}
 
       - name: Upload artifacts
